# Hotel-Management-System

./: CMakeLists.txt  Hotel-Management-System Document.md  README.md  hello.cpp  hello.h  main.cpp
Data/: DishList.txt  StaffList.txt  StaffState.txt  Storage.txt
Dish/: Dish.cpp  Dish.h  DishInfo.cpp  DishInfo.h  Dishes.cpp  Dishes.h
Kitchen/: Kitchen.cpp  Kitchen.h
Order/: Order.cpp  Order.h  OrderInfo.cpp  OrderInfo.h  OrderLibrary.cpp  OrderLibrary.h  OrderManager.cpp  OrderManager.h
Storage/: Storage.cpp  Storage.h
lib/: DuiLib_d.lib  Storage.txt
src/BackgroundSystem/: BackgroundSystem.cpp  BackgroundSystem.h
src/Dish/: DishInfo.cpp  DishInfo.h  Dishes.cpp  Dishes.h
src/Kitchen/: Kitchen.cpp  Kitchen.h
src/Menu/: Menu.cpp  Menu.h
src/Order/: Order.h  OrderLibrary.cpp  OrderLibrary.h  OrderManager.cpp  OrderManager.h
src/Staff/: Staff.cpp  Staff.h  StaffManager.cpp  StaffManager.h
src/Storage/: Storage.cpp  Storage.h
